--- a/Web/Pages/CCGMember/Compare/ObjectivePosition.cshtml
+++ b/Web/Pages/CCGMember/Compare/ObjectivePosition.cshtml
@@ -1,13 +1,9 @@
 ﻿@page
 @using Microsoft.AspNetCore.Http
 @model Web.Pages.CCGMember.Compare.ObjectivePositionModel
-@inject IHttpContextAccessor contextAccessor
 @inject IViewLocalizer Localizer
 @{
     var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en";
-    var jobPositions = Model.JobGroupPositions;
-    var levels = Model.JobGroupLevels.Select(e => e.LevelValue).ToList().Distinct();
-    var JobGroupName = isEnglish ? Model.JobGroup.NameEng : Model.JobGroup.NameFre;
 }
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -16,7 +12,7 @@
 <h2><b>@Localizer["h2Text"]</b></h2>
 
 <figure><img src="~/img/CCGMember/Positions-full.jpg" alt="Photo of " class="img-responsive thumbnail mrgn-bttm-sm" /> </figure>
-<h3><b>@JobGroupName (@Model.JobGroup.Code)</b></h3>
+<h3><b>@(isEnglish ? Model.JobGroup.NameEng : Model.JobGroup.NameFre) (@Model.JobGroup.Code)</b></h3>
 <div class="dropdown">
     <div class="col-sm-3">
         <label><b>@Localizer["Level"]</b></label><br />
@@ -25,7 +21,7 @@
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-            @foreach (var level in levels)
+            @foreach (var level in Model.JobGroupLevels.Select(e => e.LevelValue).ToList().Distinct())
             {
                 var data = new Dictionary<string, string>
                  {
@@ -48,7 +44,7 @@
         </button>
         <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
 
-            @foreach (var jp in jobPositions)
+            @foreach (var jp in Model.JobGroupPositions)
             {
                 var data = new Dictionary<string, string>
                      {
