--- a/Web/Pages/CCGMember/AllPositions.cshtml
+++ b/Web/Pages/CCGMember/AllPositions.cshtml
@@ -3,7 +3,6 @@
 @model Web.Pages.CCGMember.AllPositionsModel
 @{
     var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en";
-    var jobGroups = Model.JobGroups;
     var imagefolder = "~/img/CCGMember/";
 }
 <section role="contentinfo">
@@ -15,11 +14,10 @@
                 <input type="submit" text=@Localizer["Keywords"] value=@Localizer["Filter"] />
             </p>
         </form>
-        <form method="post">
-
-      @if (jobGroups.Any(e => Model.Filter == null || e.NameEng.ToLower().Contains(@Model.Filter.ToLower())))
+        <form>
+      @if (Model.JobGroups.Any(e => Model.Filter == null || e.NameEng.ToLower().Contains(@Model.Filter.ToLower())))
         {
-          @foreach (var jobgroup in jobGroups.Where(e => Model.Filter == null || e.NameEng.ToLower().Contains(@Model.Filter.ToLower())))
+          @foreach (var jobgroup in Model.JobGroups.Where(e => Model.Filter == null || e.NameEng.ToLower().Contains(@Model.Filter.ToLower())))
            {
         <a asp-page="CurrentLevel" asp-route-id="@jobgroup.Id">
             <div class="col-sm-3 mrgn-bttm-md">
@@ -35,7 +33,6 @@
        {
         <h4>@Localizer["NoResults"]</h4>
         }
-
       </form>
     </div>
 </section>
