--- a/Web/Pages/CCGMember/Details.cshtml
+++ b/Web/Pages/CCGMember/Details.cshtml
@@ -4,11 +4,6 @@
 
 @{
     var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en";
-    var position = Model.Position;
-    var certificates = Model.PositionCertificates;
-    var type1competencyratings = Model.PositionRatings1;
-    var type2competencyratings = Model.PositionRatings2;
-    var type3competencyratings = Model.PositionRatings3;
 }
 
     <section role="contentinfo">
@@ -21,7 +16,7 @@
         <table class="table table-hover table-bordered" width="100%" border="0" cellspacing="0" cellpadding="0">
             <thead>
                 <tr>
-                    <th class="bg-primary" colspan="2">@Localizer["POSITION DETAILS"]: @position.JobGroupCode-@position.JobGroupLevelValue @(isEnglish?position.JobTitleEng:position.JobTitleFre)</th>
+                    <th class="bg-primary" colspan="2">@Localizer["POSITION DETAILS"]: @Model.Position.JobGroupCode-@Model.Position.JobGroupLevelValue @(isEnglish? Model.Position.JobTitleEng: Model.Position.JobTitleFre)</th>
                 </tr>
             </thead>
             <tbody>
@@ -29,9 +24,9 @@
                     <th style="background-color:#f2f2f2" colspan="2">@Localizer["CERTIFICATIONS"]</th>
                 </tr>
 
-                @if (certificates.Any())
+                @if (Model.PositionCertificates.Any())
                 {
-                    @foreach (var c in certificates)
+                    @foreach (var c in Model.PositionCertificates)
                     {
                         <tr>
                             <td colspan="2">@(isEnglish?c.NameEng:c.NameFre)</td>
@@ -44,13 +39,13 @@
                         <td colspan="2">@Localizer["No Certifications"]</td>
                     </tr>
                 }
-                @if (type1competencyratings.Any())
+                @if (Model.PositionRatings1.Any())
                 {
                     <tr>
                         <th style="background-color:#f2f2f2" width="80%">@Localizer["KNOWLEDGE ELEMENTS"]</th>
                         <th style="background-color:#f2f2f2" class="text-center" width="20%">@Localizer["Level"]</th>
                     </tr>
-                    @foreach (var c in type1competencyratings)
+                    @foreach (var c in Model.PositionRatings1)
                     {
                         var key1 = "a" + c.CompetencyId.ToString();
                         var key2 = "b" + c.CompetencyId.ToString();
@@ -65,7 +60,7 @@
                                     </header>
                                     <div class="modal-body ">
                                         <p>@(isEnglish ? c.CompetencyDescEng : c.CompetencyDescFre)</p>
-                                        <button class="btn btn-primary popup-modal-dismiss" type="button">Close</button>
+                                        <button class="btn btn-primary popup-modal-dismiss" type="button">@Localizer["Close"]</button>
                                     </div>
                                 </section>
                             </td>
@@ -81,20 +76,20 @@
                                     </header>
                                     <div class="modal-body ">
                                         <p>@(isEnglish ? c.RatingDescEng : c.RatingDescFre)</p>
-                                        <button class="btn btn-primary popup-modal-dismiss" type="button">Close</button>
+                                        <button class="btn btn-primary popup-modal-dismiss" type="button">@Localizer["Close"]</button>
                                     </div>
                                 </section>
                             </td>
                         </tr>
                     }
                 }
-                @if (type2competencyratings.Any())
+                @if (Model.PositionRatings2.Any())
                 {
                     <tr>
                         <th style="background-color:#f2f2f2" width="80%">@Localizer["TECHNICAL ELEMENTS"]</th>
                         <th style="background-color:#f2f2f2" class="text-center" width="20%">@Localizer["Level"]</th>
                     </tr>
-                    @foreach (var c in type2competencyratings)
+                    @foreach (var c in Model.PositionRatings2)
                     {
                         var key1 = "c" + c.CompetencyId.ToString();
                         var key2 = "d" + c.CompetencyId.ToString();
@@ -125,20 +120,20 @@
                                     </header>
                                     <div class="modal-body ">
                                         <p>@(isEnglish ? c.RatingDescEng : c.RatingDescFre)</p>
-                                        <button class="btn btn-primary popup-modal-dismiss" type="button">Close</button>
+                                        <button class="btn btn-primary popup-modal-dismiss" type="button">@Localizer["Close"]</button>
                                     </div>
                                 </section>
                             </td>
                         </tr>
                     }
                 }
-                @if (type3competencyratings.Any())
+                @if (Model.PositionRatings3.Any())
                 {
                     <tr>
                         <th style="background-color:#f2f2f2" width="80%">@Localizer["BEHAVIOURAL ELEMENTS"]</th>
                         <th style="background-color:#f2f2f2" class="text-center" width="20%">@Localizer["Level"]</th>
                     </tr>
-                    @foreach (var c in type3competencyratings)
+                    @foreach (var c in Model.PositionRatings3)
                     {
                         var key1 = "e" + c.CompetencyId.ToString();
                         var key2 = "f" + c.CompetencyId.ToString();
@@ -169,7 +164,7 @@
                                     </header>
                                     <div class="modal-body ">
                                         <p>@(isEnglish ? c.RatingDescEng : c.RatingDescFre)</p>
-                                        <button class="btn btn-primary popup-modal-dismiss" type="button">Close</button>
+                                        <button class="btn btn-primary popup-modal-dismiss" type="button">@Localizer["Close"]</button>
                                     </div>
                                 </section>
                             </td>
@@ -194,7 +189,7 @@
         };
                 }
                 <li class="previous"><a asp-page="CurrentPosition" asp-all-route-data="routedata">@Localizer["Previous"]</a></li>
-                <li class="next"><a asp-page="SearchType" asp-route-positionid="@position.JobTitleId">@Localizer["Next"]</a></li>
+                <li class="next"><a asp-page="SearchType" asp-route-positionid="@Model.Position.JobTitleId">@Localizer["Next"]</a></li>
             </ul>
         </nav>
     </div>
